# Community-Management

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  Makefile  README.md  alembic.ini  dev.ps1  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  config.py  main.py
app/analytics/: __init__.py  aggregation.py  kpi.py  recommend.py  recommend_service.py  service.py
app/api/: routes_health.py  routes_ingestion.py  routes_kpi.py  routes_recommend.py  routes_sentiment.py
app/core/: __init__.py  cache.py  db.py  errors.py  logging.py  security.py
app/ingestion/: __init__.py  base.py  csv_importer.py  http.py  meta_connector.py  normalizer.py  parse.py  quality.py  records.py  sync.py  synthetic.py  youtube_connector.py
app/models/: __init__.py  analysis.py  content.py  ops.py  platform_account.py  reco_gen.py
app/nlp/: __init__.py  language.py  preprocessing.py  sentiment.py  service.py
app/nlp/training/: __init__.py  data.py  evaluate.py  finetune_tunizi.py  metrics.py
app/schemas/: __init__.py  health.py  ingestion.py  kpi.py  recommend.py  sentiment.py
app/workers/: __init__.py  celery_app.py  tasks_analyze.py  tasks_ingest.py
config/: __init__.py  constants.py  csv_profiles.py
docs/: api_reference.md  architecture.md  data_dictionary.md  models_and_algorithms.md
notebooks/: finetune_tunizi.ipynb
samples/: demo_posts.csv
scripts/: seed_dev_data.py
tests/: conftest.py
tests/analytics/: test_aggregation_pure.py  test_kpi_pure.py  test_kpi_service.py  test_recommend.py  test_recommend_service.py
tests/api/: test_health.py  test_kpi_api.py  test_recommend_api.py  test_sentiment_api.py
tests/ingestion/: test_csv_importer.py  test_http.py  test_idempotency.py  test_meta_connector.py  test_normalizer_pure.py  test_quality.py  test_sync.py  test_youtube_connector.py
tests/nlp/: stubs.py  test_language.py  test_preprocessing.py  test_sentiment_model_smoke.py  test_sentiment_pipeline.py  test_sentiment_service.py  test_training_data.py  test_training_metrics.py
